--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
+    "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "radix-ui": "^1.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
