--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.1.7",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
